@@ -1,0 +1,42 @@
+/* XPM */
+static char * butterfly_xpm[] = {
+"32 32 7 1",
+" 	c None",
+".	c black",
+"X	c #79E786179E79",
+"o	c #208124929658",
+"O	c #51445555FFFF",
+"+	c #082004100820",
+"@	c #000008200820",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"                                ",
+"   ......               .....   ",
+" .........            ......X.. ",
+"...X.oooo..          ...ooooo...",
+"..ooo.OOooo..      ...oooOooooX.",
+".XooOOoO..O... +. ...oO.OOOOOO..",
+".ooOOOOOOOoo.. .....ooOOOOOOX...",
+"...XOOOOOOOoo.....oooOOOOOOO..  ",
+"  ..OOOOOOOOoo...oooOOOoOOO..   ",
+"   ..OOOOOooOoo..oOoooOOOOO.    ",
+"    .OOOooooooo..ooooOOOoO..X   ",
+"  XXX.OOooOOOOo..oooOOOOO@.XXXX ",
+" XXXX.@OOOOOooo..oOooOOOO.XXXXX ",
+"  XXX+.OOOOOoOo..oooOOOOO.XXXXX ",
+"  XXXX.OOOooooo..ooooOOO.+XXX   ",
+"   XXX+OOOoOOo....oOoOOOO.XX    ",
+"    XX.@OOOOOo....OOOOOOO+X     ",
+"    XXX..@OOOO.....OOOOO@XX     ",
+"     XXX.@OOO..XXX.@OOO.XXX     ",
+"      XXX..@..X  X..OO@XXX      ",
+"      XXX...XXX   X..@.XX       ",
+"       XXXXXXX    XXXXXX        ",
+"       XXXXXX     XXXXXX        ",
+"         XXX       XXXX         ",
+"                                ",
+"                                ",
+"                                ",
+"                                "};
